--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ path{
 .toggle {
     display: flex;
     justify-content: center;
-    padding-top: 25px;
+    padding-top: 10px;
     width: 100%;
     border-top: 2px solid #E8E8E8;
     font-family: 'Product Sans';
@@ -261,7 +261,6 @@ path{
 
 .head-to-head-legend-label {
     margin: 0px;
-    padding: 0px 13px;
     text-transform: capitalize;
     font-size: 12px;
     line-height: 1.3;
@@ -278,6 +277,8 @@ path{
     height: 7px;
     display: flex;
     margin-top: 5px;
+    padding-right: 5px;
+    padding-left: 5px;
 }
 
 .single-view {display: none;}
@@ -504,6 +505,32 @@ path{
     flex-wrap:wrap;
   }
 }
+
+@media only screen and (max-width: 500px) {
+  .chart-title{
+    font-size: 14px;
+  }
+  .head-to-head {
+      padding-top: 5px;
+  }
+  .head-to-head-legend-box{
+    width:8px;
+  }
+  .toggles select{
+
+  }
+  .toggle-overlay{
+    font-size: 14px;
+  }
+  .toggle-overlay::after{
+    position: absolute;
+    right: 11px;
+    font-size: 9px;
+    top: 12px;
+    color: black;
+  }
+}
+
 
 
 div.cartodb-tooltip{
